[package]
name = "hism-server-v2"
version = "0.1.0"
authors = ["shane <moloney.shane@yahoo.com>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html
[[bin]]
name = "hism-server-v2"
path = "src/main.rs"

[dependencies]
actix-redis = { version = "0.8.2", features = ["web"] }
futures = "0.3.5"
actix-session = "0.3"
actix-web = { version = "2.0.0", features = ["rustls"] }
actix-rt = "1.0"
actix-http = "1.0.1"
actix-files = "0.2.1"
chrono = { version = "0.4", features = ["serde"] }
dotenv = "0.11"
diesel = { version = "1.4", features = ["sqlite", "r2d2", "uuid", "chrono"] }
diesel_migrations = "1.4"
env_logger = "0.7"
lazy_static = "1.4"
listenfd = "0.3"
log = "0.4"
serde = "1.0"
serde_json = "1.0"
r2d2 = "0.8"
rand = "0.7"
rust-argon2 = "0.8"
uuid = { version = "0.6", features = ["serde", "v4"] }
actix-cors = "0.2.0"
rustls = "0.16"
